# open_sesame

./: .env-config  .env.example  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.md.backup  pixi.toml  pyproject.toml  requirements.txt  settings.ini
.claude/commands/: speckit.implement.md  speckit.plan.md  speckit.specify.md
.specify/: .initialized
.specify/memory/: constitution.md
.specify/scripts/bash/: check-constitution.sh  env-init.sh  env-sync.sh  env-validate.sh  export-methods.sh  init-project.sh
.specify/templates/: spec-template.md
data/: README.md
docs/: air-gapped-setup.md  environment-guide.md
docs/developer/: architecture.md  extending-speckit.md  testing-guide.md
docs/user/: pixi-workflows.md  quickstart.md  troubleshooting.md
figures/: .gitkeep
logs/: .gitkeep
nbs/: 00_core.ipynb  01_config.ipynb  02_data.ipynb  03_prompts.ipynb  04_classifier.ipynb  05_batch.ipynb  06_validation.ipynb  07_visualization.ipynb  index.ipynb
nbs/examples/: 01_single_classification.ipynb  02_batch_processing.ipynb  03_validation_analysis.ipynb
openness_classifier/: __init__.py  _modidx.py  batch.py  classifier.py  config.py  core.py  data.py  prompts.py  validation.py  visualization.py
specs/001-openness-classification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-openness-classification/checklists/: requirements.md
specs/001-openness-classification/contracts/: classifier_api.md
specs/002-refine-classification-taxonomy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-refine-classification-taxonomy/checklists/: requirements.md
specs/002-refine-classification-taxonomy/contracts/: classification_prompt.yaml
tests/validation/: run-all-tests.sh  test-env-init.sh  test-env-sync.sh  test-env-validate.sh
