[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openness_classifier"
version = "0.1.0"
description = "Few-shot LLM-based classification of data and code openness in scholarly publications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kelly Caylor", email = "kcaylor@ucsb.edu"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["openness", "classification", "llm", "few-shot", "research", "bibliometrics", "FAIR"]

dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "litellm>=1.0",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "python-dotenv>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "nbdev>=2.3",
    "jupyterlab>=4.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/kcaylor/open_sesame"
Documentation = "https://kcaylor.github.io/open_sesame"
Repository = "https://github.com/kcaylor/open_sesame"
Issues = "https://github.com/kcaylor/open_sesame/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openness_classifier*"]

[tool.nbdev]
# nbdev configuration
lib_name = "openness_classifier"
lib_path = "openness_classifier"
nbs_path = "nbs"
doc_path = "_docs"
branch = "main"
user = "kcaylor"
